# chameleon

./: .gitignore  com.github.tsitokhtsev.chameleon.yml  meson.build
data/: chameleon.appdata.xml.in  chameleon.desktop.in  gschema.xml  themer.appdata.xml  themer.appdata.xml.in  themer.desktop  themer.desktop.in
meson/: post_install.py
po/: POTFILES  com.github.tsitokhtsev.chameleon.pot  com.github.tsitokhtsev.themer.pot
src/: Application.vala  AppsMenu.vala  HeaderBar.vala  Main.vala  MainView.vala  PlatformsMenu.vala  RuntimesMenu.vala  ThemesMenu.vala  Warning.vala  Window.vala
